pequenas melhorias no listener